Fix page posts version mobile

--- a/themes/coders/assets/scss/_content.scss
+++ b/themes/coders/assets/scss/_content.scss
@@ -3,10 +3,12 @@
   display: flex;
   margin-top: 1.6rem;
   margin-bottom: 3.2rem;
+
   article {
     header {
       margin-top: 6.4rem;
       margin-bottom: 3.2rem;
+
       h1 {
         font-size: 4.2rem;
         line-height: 4.6rem;
@@ -17,25 +19,31 @@
         }
       }
     }
+
     footer {
       margin-top: 4rem;
+
       .see-also {
         margin: 3.2rem 0;
+
         h3 {
           margin: 3.2rem 0;
         }
       }
     }
+
     p {
       text-align: justify;
       text-justify: auto;
       hyphens: auto;
     }
   }
+
   .post {
     .post-title {
       margin-bottom: 0.75em;
     }
+
     .post-meta {
       i {
         text-align: center;
@@ -43,6 +51,7 @@
         margin-left: 0;
         margin-right: 0.5rem;
       }
+
       .date {
         .posted-on {
           margin-left: 0;
@@ -51,10 +60,12 @@
       }
     }
   }
+
   figure {
     margin: 0;
     padding: 0;
   }
+
   figcaption p {
     text-align: center;
     font-style: italic;
@@ -63,21 +74,33 @@
   }
 }
 
-.avatar img {
-  width: 20rem;
-  height: auto;
-  border-radius: 50%;
-  @media only screen and (max-width: 768px) {
-    width: 10rem;
+.avatar {
+  img {
+    width: 20rem;
+    height: auto;
+    border-radius: 50%;
+    @media only screen and (max-width: 768px) {
+      width: 10rem;
+    }
   }
 }
 
 .list {
+  .title {
+    @media only screen and (max-width: 768px) {
+      margin: 0;
+    }
+  }
+
   ul {
     width: 60%;
     margin: 5rem auto;
     list-style: none;
     padding: 0;
+
+    @media only screen and (max-width: 768px) {
+      width: 100%;
+    }
 
     li {
       font-size: 1.8rem;
@@ -111,7 +134,6 @@
 
         @media only screen and (max-width: 768px) {
           display: block;
-          text-align: left;
         }
       }
 
@@ -120,7 +142,7 @@
 
         @media only screen and (max-width: 768px) {
           display: block;
-          text-align: left;
+          float: left;
         }
       }
 
@@ -145,12 +167,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
   .about {
     text-align: center;
+
     h1 {
       margin-top: 2rem;
       margin-bottom: 0.5rem;
     }
+
     h2 {
       margin-top: 1rem;
       margin-bottom: 0.5rem;
@@ -159,26 +184,32 @@
         font-size: 2rem;
       }
     }
+
     ul {
       list-style: none;
       margin: 3rem 0 1rem 0;
       padding: 0;
+
       li {
         display: inline-block;
         position: relative;
+
         a {
           color: $fg-color;
           text-transform: uppercase;
           margin-left: 1rem;
           margin-right: 1rem;
           font-size: 1.6rem;
+
           &:hover,
           &:focus {
             color: $link-color;
           }
+
           @media only screen and (max-width: 768px) {
             font-size: 1.4rem;
           }
+
           i {
             font-size: 3.2rem;
           }
@@ -189,6 +220,7 @@
 
   .error {
     text-align: center;
+
     h1 {
       margin-top: 2rem;
       margin-bottom: 0.5rem;
@@ -197,10 +229,12 @@
         font-size: 3.2rem;
       }
     }
+
     h2 {
       margin-top: 2rem;
       margin-bottom: 3.2rem;
       font-size: 3.2rem;
+
       @media only screen and (max-width: 768px) {
         font-size: 2.8rem;
       }
